--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -863,7 +863,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -923,7 +923,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -983,7 +983,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1040,7 +1040,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1097,7 +1097,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1154,7 +1154,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1211,7 +1211,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1268,7 +1268,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1325,7 +1325,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1382,7 +1382,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1439,7 +1439,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1496,7 +1496,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1553,7 +1553,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1610,7 +1610,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1688,7 +1688,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1746,7 +1746,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1805,7 +1805,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1863,7 +1863,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1922,7 +1922,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -1981,7 +1981,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2043,7 +2043,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2101,7 +2101,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2160,7 +2160,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2219,7 +2219,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2278,7 +2278,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2336,7 +2336,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2398,7 +2398,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2457,7 +2457,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2515,7 +2515,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2573,7 +2573,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2631,7 +2631,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
@@ -2690,7 +2690,7 @@
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
                                     </div>
-                                    <div class="rating__elem">
+                                    <div class="rating__elem rating__elem--last-child">
                                         <svg role="img" aria-label="rating">
                                             <use xlink:href="#svg-star"></use>
                                         </svg>
