--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=auto, maximum-scale=0.2, maximum-scale=1.5, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=auto, minimum-scale=0.2, maximum-scale=1.5, user-scalable=yes">
     <meta property="og:title" content="Xаврошка - магазин здоровых продуктов">
     <meta property="og:site_name" content="Xаврошка - магазин здоровых продуктов">
     <meta property="og:url" content="#">
